--- a/src/app/housing-location/housing-location.html
+++ b/src/app/housing-location/housing-location.html
@@ -7,5 +7,5 @@
       />
       <h2 class="listing-heading">{{ houseLocation().name }}</h2>
       <p class="listing-location">{{ houseLocation().city }}, {{ houseLocation().state }}</p>
-      <a [routerLink]="['/details', houseLocation().id]">Learn More</a>
+      <a [routerLink]="['/details', houseLocation().locationId]">Learn More</a>
     </section>
